docs: README.md Update

--- a/example/Makefile
+++ b/example/Makefile
@@ -1,5 +1,5 @@
 OUTPUT = converter
-GCC_FLAGS = -Wall -I./include
+GCC_FLAGS = -Wall -I../include
 
 ifeq ($(OS), Windows_NT)
 	CLEAN_COMMAND = del $(OUTPUT).exe
@@ -8,7 +8,7 @@ else
 endif
 
 $(OUTPUT):
-	gcc $(GCC_FLAGS) $(wildcard ./src/*.c) -o $(OUTPUT)
+	gcc $(GCC_FLAGS) ./src/main.c ../src/converter.c -o $(OUTPUT)
 
 clean:
 	$(CLEAN_COMMAND)
